@@ -1,3 +1,7 @@
+Jul 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- fixed segfault when adding servers with no name to favorites
+- added RTCW protocol 59
+
 July 4, 2002: Alex Burger <alex@fragit_dot_net>
 - Changed version to 0.9.9c
 
